[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Theme.tres" type="Theme" id=1]
[ext_resource path="res://sprites/CC_bg.png" type="Texture" id=2]
[ext_resource path="res://objects/menu/Pause.gd" type="Script" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.a = -UV.x/2.0 + 1.0;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 235.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
color = Color( 0, 0, 0, 0.498039 )

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
material = SubResource( 2 )
margin_right = 235.0
margin_bottom = 360.0
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_top = 135.0
margin_right = 235.0
margin_bottom = 360.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_top = 65.0
margin_right = 235.0
margin_bottom = 160.0
rect_min_size = Vector2( 235, 0 )
custom_constants/separation = 19

[node name="Resume" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 235.0
margin_bottom = 19.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Resume"
align = 1

[node name="Options" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 235.0
margin_bottom = 57.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Options"
align = 1

[node name="Quit" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 235.0
margin_bottom = 95.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Quit"
align = 1

[node name="CenterLogo" type="CenterContainer" parent="ColorRect"]
margin_right = 235.0
margin_bottom = 157.0

[node name="TextureRect" type="TextureRect" parent="ColorRect/CenterLogo"]
margin_right = 235.0
margin_bottom = 157.0
rect_min_size = Vector2( 235, 157 )
texture = ExtResource( 2 )
expand = true

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="ColorRect/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_gui_input"]
[connection signal="mouse_entered" from="ColorRect/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_mouse_exited"]
